lang2/macro/tests/ui/fail/07-constructor-missing-self.stderr
error: `&self` or `&mut self` is mandatory for ink! functions
  --> $DIR/07-constructor-missing-self.rs:12:9
   |
12 |         fn invalid_self_val() {}
   |         ^^^^^^^^^^^^^^^^^^^^^
